--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Michroma&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Bungee+Inline&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Dancing+Script&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Ubuntu+Condensed&display=swap');
 html {
     font-size: 14px;
     font-family: 'Michroma', sans-serif;
@@ -14,22 +10,6 @@ body {
 
 div {
     box-sizing: border-box;
-}
-
-.cursive {
-    font-family: 'Bungee Inline', cursive;
-}
-
-.dancing {
-    font-family: 'Dancing Script', cursive;
-}
-
-.microma {
-    font-family: 'Michroma', sans-serif;
-}
-
-.ubuntu {
-    font-family: 'Ubuntu Condensed', sans-serif;
 }
 
 a {
@@ -52,6 +32,7 @@ nav {
 .bg-green {
     background-color: rgba(151, 206, 76, 0.8);
     transition: 250ms linear;
+    box-shadow: inset -2px 2px 34px -7px rgba(0, 0, 0, 0.75);
 }
 
 .box-shadow-v1 {
@@ -73,9 +54,10 @@ nav .nav-options {}
 }
 
 .nav-options {
-    flex-basis: 50%;
+    flex-basis: 30%;
     display: flex;
     align-items: center;
+    justify-content: space-around;
 }
 
 .nav-options ul {
@@ -84,18 +66,26 @@ nav .nav-options {}
     flex: 2;
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
     margin: 0;
     padding: 0;
     background-color: transparent;
 }
 
 .nav-options ul li {
-    flex-basis: 25%;
-    margin: 5px;
+    justify-content: space-around;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    background-color: transparent;
     word-spacing: 1px;
     letter-spacing: 1.1px;
     cursor: pointer;
+}
+
+.custom-border-nav li {}
+
+.nav-options ul li:hover {
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 .nav-options ul li a:hover {
@@ -103,6 +93,7 @@ nav .nav-options {}
 }
 
 .nav-options ul li a {
+    margin: 5px;
     color: rgb(192, 183, 183);
 }
 
@@ -153,19 +144,6 @@ nav .nav-options {}
     -webkit-border-radius: 0px 42px 42px 0px;
 }
 
-.hide-me {
-    display: none;
-}
-
-.hide-by-op {
-    opacity: 0;
-    margin-right: 500px;
-}
-
-.hide-by-fly {
-    margin-top: 50px;
-}
-
 .container {
     height: 120vh;
 }
@@ -182,7 +160,7 @@ nav .nav-options {}
     margin: auto 50px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    max-grid-template-rows: 470px;
+    grid-template-rows: 470px;
     grid-template-areas: "left right";
     background-color: transparent;
     height: 50%;
@@ -195,15 +173,11 @@ nav .nav-options {}
     font-size: 3em;
     overflow-y: scroll;
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     justify-content: flex-end;
     flex-direction: column;
-    -webkit-box-shadow: -9px 9px 21px -8px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: -9px 9px 21px -8px rgba(0, 0, 0, 0.75);
-    box-shadow: -9px 9px 21px -8px rgba(0, 0, 0, 0.75);
+    box-shadow: -1px 3px 20px 7px rgba(0, 0, 0, 0.75);
     border-radius: 40px 10px 10px 40px;
-    -moz-border-radius: 40px 10px 10px 40px;
-    -webkit-border-radius: 40px 10px 10px 40px;
     border: 0px solid #000000;
 }
 
@@ -218,9 +192,7 @@ nav .nav-options {}
 .right {
     text-align: center;
     grid-area: right;
-    -webkit-box-shadow: 9px 9px 21px -8px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 9px 9px 21px -8px rgba(0, 0, 0, 0.75);
-    box-shadow: 9px 9px 21px -8px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 3px 20px 7px rgba(0, 0, 0, 0.75);
     border-radius: 10px 40px 40px 10px;
     border: 0px solid #000000;
 }
@@ -236,10 +208,18 @@ nav .nav-options {}
 
 .right p.cursive {
     font-size: 2em;
+    line-height: 25px;
 }
 
 #char-info {
     cursor: pointer;
+    width: 50%;
+    height: 50%;
+}
+
+#char-info:hover {
+    box-shadow: -1px 3px 61px 7px rgba(0, 0, 0, 0.75);
+    border-radius: 0px 20px 20px 0px;
 }
 
 #char-infobox {
@@ -262,7 +242,8 @@ nav .nav-options {}
     display: flex;
     flex-direction: column;
     border-radius: 10%;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    align-items: center;
     border: 0px solid #000000;
     overflow: hidden;
     -webkit-box-shadow: 0px 4px 25px 3px rgba(0, 0, 0, 0.75);
@@ -274,7 +255,7 @@ nav .nav-options {}
 }
 
 #char-info-close {
-    border-radius: 25%;
+    border-radius: 50%;
     background-color: transparent;
     border: none;
     font-size: 3em;
@@ -282,7 +263,7 @@ nav .nav-options {}
 }
 
 #char-info-close:hover {
-    background-color: white;
+    color: white;
 }
 
 #char-info-close:focus {
@@ -291,31 +272,100 @@ nav .nav-options {}
 
 #info-here {
     background-color: rgba(0, 0, 0, 0.5);
-    font-family: 'Ubuntu Condensed', sans-serif;
     display: flex;
     justify-content: space-evenly;
     width: 100%;
-    height: 110%;
+    height: auto;
 }
 
 #info-here img {
     margin: 10px;
-    border-radius: 10px 10px 10px 84px;
-    -moz-border-radius: 10px 10px 10px 84px;
-    -webkit-border-radius: 10px 10px 10px 84px;
     border: 1px solid white;
+    border-radius: 30px 0px 0px 76px;
 }
 
 #info-here div {
     letter-spacing: 5px;
-    font-size: 1.3em;
+    font-size: 1em;
+    line-height: 1.5;
     color: white;
 }
 
+#info-here div h3 {
+    text-align: center;
+}
+
+#more-char {
+    font-size: 3em;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+#more-char:focus {
+    outline: none;
+}
+
+#more-char:hover {
+    border-radius: 0px 0px 20px 20px;
+    background-color: rgba(255, 255, 255, 0.1);
+    box-shadow: -1px 3px 61px 7px rgba(0, 0, 0, 0.75);
+}
+
 //second container {}
-.characters {
+#characters {
+    margin-top: 50px;
+    display: grid;
+    grid-template-rows: 1fr 2fr;
+    grid-template-columns: 1fr 2fr;
+    padding: 20px;
+    grid-template-areas: "sidebar search" "main main";
+    grid-gap: 25px;
+}
+
+.char-cont {
+    grid-area: main;
+    background-color: rgba(255, 255, 255, 0.2);
+    border: 1px solid black;
+}
+
+.char-filter {
+    grid-area: sidebar;
+    background-color: rgba(255, 255, 255, 0.2);
+    border: 1px solid black;
     display: flex;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+#center-me {
+    margin: auto;
+}
+
+.filter-loc,
+.filter-epi {
+    flex: 1;
+    display: block;
+    font-size: 2em;
+}
+
+.char-filter label {
+    font-size: 1.5em;
+}
+
+.char-search {
+    grid-area: search;
+    background-color: rgba(255, 255, 255, 0.2);
+    border: 1px solid black;
+}
+
+@media only screen and (max-device-width: 1440px) {
+    .left {
+        border: 2px solid white;
+        box-shadow: 2px 3px 36px 7px rgba(0, 0, 0, 0.75);
+    }
+    .right {
+        box-shadow: 2px 3px 36px 7px rgba(0, 0, 0, 0.75);
+        border: 2px solid white;
+    }
 }
