--- a/css/index.css
+++ b/css/index.css
@@ -324,16 +324,14 @@ p#char-info {
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: 1fr 4fr;
-    grid-template-areas: "filter search" "main main";
+    grid-template-areas: "filter filter" "main main";
     grid-gap: 10px;
 }
 
 .char-filter {
     grid-area: filter;
-    border: 1px solid black;
-    /*background-color: rgba(255, 255, 255, 0.3);*/
-    background-color: white;
-    border-radius: 75px 0px 0px 0px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 75px 75px 0px 0px;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -342,57 +340,68 @@ p#char-info {
 
 .char-filter label {
     text-align: center;
-}
-
-.char-search {
-    grid-area: search;
-    border-radius: 0px 75px 0px 0px;
-    /*background-color: rgba(255, 255, 255, 0.3);*/
-    background-color: white;
-    border: 1px solid black;
+    color: white
 }
 
 .char-disp-area {
     grid-area: main;
-    border: 1px solid black;
-    /*background-color: rgba(255, 255, 255, 0.3);*/
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.1);
+    overflow-y: scroll;
 }
 
 .char-here {
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: auto;
     grid-template-columns: auto;
     grid-template-areas: "gallery";
 }
 
-.curr-char-box {
-    grid-area: main;
-    border: 1px solid red;
-    padding: 25px;
-    display: flex;
-    align-items: flex-start;
-}
-
 .char-box {
     grid-area: gallery;
-    border: 1px solid black;
     display: flex;
     flex-wrap: wrap;
+    justify-content: flex-end;
 }
 
-.char-main {
-    margin: auto;
-    width: 70%;
-    height: 100%;
-    border: 1px solid green;
+.here {
+    display: flex;
 }
 
 .char-mini {
-    border: 1px solid black;
-    flex-basis: 100%;
-    height: 200px;
-    display: flex;
+    flex: 1;
+    text-align: left;
+    height: 50%;
+}
+
+.char-mini span {
+    background-color: rgba(0, 0, 0, 0.3);
+    width: 70%;
+    color: white;
+    border-top: 1px solid white;
+}
+
+.char-mini h3 {
+    border-top: 1px solid white;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 0px 50px 50px 10px;
+    width: 70%;
+}
+
+.select-d {
+    text-align: center;
+    background-color: red;
+}
+
+hr {
+    color: black;
+    background-color: black;
+    width: 100%;
+}
+
+.playSound {
+    background-color: transparent;
+    border: none;
 }
 
 @media only screen and (max-device-width: 1440px) {
